<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.apicurio</groupId>
    <artifactId>apicurio-common-app-components</artifactId>
    <packaging>pom</packaging>
    <version>0.1.14-SNAPSHOT</version>
    <name>apicurio-common-app-components</name>

    <url>https://www.apicur.io/</url>
    <description>Common application components for Apicurio applications.</description>

    <organization>
        <name>Red Hat</name>
        <url>https://www.redhat.com/</url>
    </organization>

    <developers>
        <developer>
            <name>Eric Wittmann</name>
            <id>EricWittmann</id>
            <email>eric.wittmann@redhat.com</email>
            <organization>Red Hat</organization>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>-5</timezone>
        </developer>
        <developer>
            <name>Carles Arnal</name>
            <id>carlesarnal</id>
            <email>carles.arnal@redhat.com</email>
            <organization>Red Hat</organization>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>Apache License Version 2.0</name>
            <url>https://repository.jboss.org/licenses/apache-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/Apicurio/apicurio-common-app-components/issues</url>
    </issueManagement>

    <scm>
        <connection>scm:git:git@github.com:apicurio/apicurio-common-app-components.git</connection>
        <developerConnection>scm:git:git@github.com:apicurio/apicurio-common-app-components.git</developerConnection>
        <url>scm:git:git@github.com:apicurio/apicurio-common-app-components.git</url>
    </scm>

    <modules>
        <module>core</module>
        <module>auth</module>
        <module>config/definitions</module>
        <module>config/impl</module>
        <module>config/all</module>
        <module>config-index/deployment</module>
        <module>config-index/runtime</module>
        <module>config-index/integration-tests</module>
        <module>util</module>
        <module>logging</module>
        <module>maven-plugin</module>
        <module>web</module>
        <module>storage</module>
        <module>mt</module>
        <module>test</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
        <timestamp>${maven.build.timestamp}</timestamp>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <!-- Specifications -->
        <annotation-api.version>1.3.5</annotation-api.version>

        <!-- Quarkus Version -->
        <quarkus.version>2.2.3.Final</quarkus.version>

        <!-- Libraries -->
        <apicurio-common-rest-client.version>0.1.13.Final</apicurio-common-rest-client.version>
        <jackson.version>2.12.5</jackson.version>
        <sentry.version>1.7.30</sentry.version>
        <junit.version>5.9.1</junit.version>
        <keycloak.testcontainers.version>1.9.0</keycloak.testcontainers.version>
        <keycloak-admin-client.version>19.0.3</keycloak-admin-client.version>
        <wiremock.version>2.34.0</wiremock.version>

        <!-- Plugins -->
        <version.maven-javadoc-plugin>3.4.1</version.maven-javadoc-plugin>
        <version.maven-source-plugin>3.2.1</version.maven-source-plugin>
        <version.maven-compiler-plugin>3.10.1</version.maven-compiler-plugin>
        <surefire-plugin.version>2.22.2</surefire-plugin.version>
        <surefire-junit.version>1.3.2</surefire-junit.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Quarkus -->
            <dependency>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Apicurio HTTP Client -->
            <dependency>
                <groupId>io.apicurio</groupId>
                <artifactId>apicurio-common-rest-client-vertx</artifactId>
                <version>${apicurio-common-rest-client.version}</version>
            </dependency>
            <dependency>
                <groupId>io.apicurio</groupId>
                <artifactId>apicurio-common-rest-client-jdk</artifactId>
                <version>${apicurio-common-rest-client.version}</version>
            </dependency>
            <dependency>
                <groupId>io.apicurio</groupId>
                <artifactId>apicurio-common-rest-client-common</artifactId>
                <version>${apicurio-common-rest-client.version}</version>
            </dependency>

            <!-- Jackson -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>

            <!-- Sentry -->
            <dependency>
                <groupId>io.sentry</groupId>
                <artifactId>sentry</artifactId>
                <version>${sentry.version}</version><!--$NO-MVN-MAN-VER$ -->
            </dependency>

            <!-- Test Containers -->
            <dependency>
                <groupId>com.github.dasniko</groupId>
                <artifactId>testcontainers-keycloak</artifactId>
                <version>${keycloak.testcontainers.version}</version>
            </dependency>
            
            <!-- Keycloak Admin Client -->
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-admin-client</artifactId>
                <version>${keycloak-admin-client.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.tomakehurst</groupId>
                <artifactId>wiremock-jre8</artifactId>
                <version>${wiremock.version}</version>
            </dependency>

            <!-- JUnit -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${version.maven-compiler-plugin}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <fork>true</fork>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${version.maven-source-plugin}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${version.maven-javadoc-plugin}</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <additionalDependencies>
                        <additionalDependency>
                            <groupId>jakarta.annotation</groupId>
                            <artifactId>jakarta.annotation-api</artifactId>
                            <version>${annotation-api.version}</version>
                        </additionalDependency>
                    </additionalDependencies>
                    <failOnError>false</failOnError>
                    <failOnWarnings>false</failOnWarnings>
                    <source>${maven.compiler.source}</source>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <distributionManagement>
                <snapshotRepository>
                    <id>ossrh</id>
                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
                </snapshotRepository>
            </distributionManagement>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.0.1</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <!-- Prevent `gpg` from using pinentry programs -->
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
